Fix squashed images for profile card

--- a/src/app/components/profile-card/profile-card.component.scss
+++ b/src/app/components/profile-card/profile-card.component.scss
@@ -39,16 +39,20 @@
 		width: 100%;
 		margin-bottom: 4rem;
 		aspect-ratio: 16/9;
+		position: relative;
 	}
 
 	&__cover {
 		display: flex;
 		width: 100%;
+		height: 100%;
 		position: absolute;
 		transition: opacity 0.25s ease;
 		overflow: hidden;
 		border-radius: $container-border-radius;
 		aspect-ratio: 16/9;
+		overflow: hidden;
+		object-fit: cover;
 
 		&--first-image-disabled {
 			opacity: 0;
